2008-02-29  Rene Stadler  <mail@renestadler.de>

	* sys/v4l/gstv4lelement.c:
	Add missing semicolon to fix indentation.

2008-02-29  Julien Moutte  <julien@fluendo.com>

        * ext/alsa/gstalsa.c: (gst_alsa_open_iec958_pcm),
        (gst_alsa_probe_supported_formats): Probe for IEC958 pcm to detect
        if we can do SPDIF output.
        * ext/alsa/gstalsa.h:
        * ext/alsa/gstalsasink.c: (set_hwparams), (alsasink_parse_spec),
        (gst_alsasink_prepare), (gst_alsasink_close), (gst_alsasink_write):
        * ext/alsa/gstalsasink.h: Initial support for SPDIF.
        * gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_parse_caps):
        * gst-libs/gst/audio/gstringbuffer.h: Add non linear buffer types
        to support AC3, EC3 and IEC958 buffers.

2008-02-29  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/interfaces/mixer.c: (GST_MIXER_MESSAGE_HAS_TYPE),
	  (gst_mixer_message_parse_mute_toggled),
	  (gst_mixer_message_parse_record_toggled),
	  (gst_mixer_message_parse_volume_changed),
	  (gst_mixer_message_parse_option_changed):
	  De-cruft and fix message type assertions (NULL is not a really
	  valid mixer message type string).

2008-02-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/libvisual/visual.c: (gst_vis_src_negotiate):
	When negotiating, actually start from a format that we can support
	instead of from the too generic template.

2008-02-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (gst_play_bin_set_property):
	Enable vis setting.

	* gst/playback/gstplaysink.c: (gst_play_sink_init),
	(gst_play_sink_dispose), (gst_play_sink_vis_unblocked),
	(gst_play_sink_vis_blocked), (gst_play_sink_set_vis_plugin),
	(gen_vis_chain):
	Implement vis switching while playing.

2008-02-28  David Schleef  <ds@schleef.org>

	* gst-libs/gst/riff/riff-media.c: Add Dirac mapping

2008-02-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Peter Kjellerstedt  <pkj at axis com>
